--- a/TODO.txt
+++ b/TODO.txt
@@ -3,12 +3,13 @@ TODO
 If you are looking to contribute, feel free to do any of these things:
 
 - Give freesound miner its own saveFile method
-- Handle daily-limit-reached exceptions
-- Make the miners multiprocessed
-- Add Flickr miner
+- Handle daily-limit-reached exceptions (like in old code)
+- Make the miners and other things multiprocessed
 - Add BoCC model
 - Unit tests
 - Installer script (setup.py)
+- Add more miners, e.g.:
+  -- Flickr
 - Add more demos, e.g.:
   -- Classifying documents multi-modally
   -- Doing BLI (needs avgmax and maxmax sim functions in mmfeat.space.sim)
